crates/core/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__error_empty_input.snap
---
source: crates/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
assertion_line: 228
expression: result
---
Err(
    ParseErrors {
        errors: [
            ParseError {
                code: TierValidationError,
                severity: Error,
                location: SourceLocation {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    line: None,
                    column: None,
                },
                context: Some(
                    ErrorContext {
                        source_text: "",
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        expected: [],
                        found: "header",
                        line_offset: None,
                    },
                ),
                labels: [],
                message: "Tier validation error: header node resolved outside input range (wrapper artifact)",
                suggestion: Some(
                    "Check header formatting — the line may be malformed or in the wrong position",
                ),
                help_url: Some(
                    "https://talkbank.org/errors/E600",
                ),
            },
        ],
    },
)
