crates/core/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_comment.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Ok(
    Comment {
        content: BulletContent {
            segments: BulletContentSegments(
                [
                    Text(
                        BulletContentText {
                            text: "This is a test comment",
                        },
                    ),
                ],
            ),
        },
    },
)
