crates/core/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_date.snap
---
source: crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
assertion_line: 225
expression: result
---
Ok(
    Date {
        date: Valid {
            day: 29,
            month: Feb,
            year: 1996,
            raw: "29-FEB-1996",
        },
    },
)
