crates/core/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_media.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Ok(
    Media(
        MediaHeader {
            filename: MediaFilename(
                "media-file",
            ),
            media_type: Video,
            status: None,
        },
    ),
)
