crates/core/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_participants.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Ok(
    Participants {
        entries: ParticipantEntries(
            [
                ParticipantEntry {
                    speaker_code: SpeakerCode(
                        "CHI",
                    ),
                    name: None,
                    role: ParticipantRole(
                        "Child",
                    ),
                },
                ParticipantEntry {
                    speaker_code: SpeakerCode(
                        "MOT",
                    ),
                    name: None,
                    role: ParticipantRole(
                        "Mother",
                    ),
                },
            ],
        ),
    },
)
