crates/core/talkbank-parser/src/parser/chat_file_parser/header_dispatch/tests/snapshots/header_parsing_tests__header_with_content_languages.snap
---
source: rust/crates/talkbank-tree-sitter-parser/src/parser/chat_file_parser/header_dispatch/tests.rs
expression: result
---
Ok(
    Languages {
        codes: LanguageCodes(
            [
                LanguageCode(
                    "eng",
                ),
            ],
        ),
    },
)
